# 2D-shooter-game

./: CMakeLists.txt  bullet.c  bullet.h  hud.h  main.c  map.c  map.h  player.c  player.h  tilemap.c  tilemap.h
src/: bullet.c  bullet.h  hud.c  hud.h  light_beam.c  light_beam.h  main.c  menu.c  menu.h  network.c  network.h  player.c  player.h  tilemap.c  tilemap.h  utils.h
win-build/: CMakeLists(win).txt  toolchain-mingw64.cmake
